# yoinker

./: Cargo.toml  env.example
src/: main.rs  sleep.rs  stats.rs  utils.rs  yoinker.rs
src/strategy/: blue_shell.rs  mod.rs  mostly_nice.rs  red_shell.rs
